# DMP_PRAKTIKUM

./: .gitignore  .gitignore~  CMakeLists.txt  CMakeLists.txt.orig  CMakeLists.txt~  README.md  TODO.txt  camerahandle.cpp  camerahandle.h  error_info.txt  extern_CMakeLists.txt  frames.gv  history.txt  history.txt~  mainpage.dox  manifest.xml  manifest.xml~  package.xml  target_CMakeLists.txt
catkin_generated/: generate_cached_setup.py  setup_cached.sh
data/: .Control-FRI-Driver_5ms.init.swp  3_dmps_int.mat  Control-FRI-Driver_10ms.init  DemonstratedTrajectory.txt  DemonstratedTrajectory.txt~  InitAnglePos.txt~  ModelDMPGaussBetaManyData.mat  ModelDMPGaussBetaManyData3.mat  ModelDMPGaussBetaManyData3Joint.mat  Old_Init_Angle.txt  ReproductionData.txt~  TestOnlineGmrOutput.mat  dmp_test.mat  evaluate_joint_trajectories.m  joints_straj.mat  joints_vtraj.mat  joints_xtraj.mat  plot_gmr.m  plot_gmr.m~  plot_gmr_joint.m  plotline.m  rec_end.mat  rec_taskparms.mat  straj.m  straj.mat  vtraj.m  vtraj.mat  xtraj.m  xtraj.mat
data/Trajectories/: Traj1.txt  Traj10.txt  Traj11.txt  Traj12.txt  Traj2.txt~  Traj3.txt  Traj4.txt  Traj5.txt  Traj6.txt  Traj7.txt  Traj8.txt  Traj9.txt
data/affan_trajectories/: DemonstratedTaskParams1.txt  DemonstratedTaskParams1.txt~  DemonstratedTaskParams10.txt  DemonstratedTaskParams11.txt  DemonstratedTaskParams12.txt  DemonstratedTaskParams13.txt  DemonstratedTaskParams14.txt  DemonstratedTaskParams15.txt  DemonstratedTaskParams16.txt  DemonstratedTaskParams2.txt  DemonstratedTaskParams3.txt  DemonstratedTaskParams4.txt  DemonstratedTaskParams5.txt  DemonstratedTaskParams6.txt  DemonstratedTaskParams7.txt  DemonstratedTaskParams8.txt  DemonstratedTaskParams8.txt~  DemonstratedTaskParams9.txt
data/joint_trajectories/: DemonstratedTaskParams1.txt  DemonstratedTaskParams10.txt  DemonstratedTaskParams11.txt  DemonstratedTaskParams12.txt  DemonstratedTaskParams13.txt  DemonstratedTaskParams14.txt  DemonstratedTaskParams15.txt  DemonstratedTaskParams16.txt  DemonstratedTaskParams2.txt  DemonstratedTaskParams3.txt  DemonstratedTaskParams4.txt  DemonstratedTaskParams5.txt  DemonstratedTaskParams6.txt  DemonstratedTaskParams7.txt  DemonstratedTaskParams8.txt  DemonstratedTaskParams9.txt  DemonstratedTrajectory_Cart1.txt  DemonstratedTrajectory_Cart10.txt  DemonstratedTrajectory_Cart11.txt  DemonstratedTrajectory_Cart12.txt  DemonstratedTrajectory_Cart13.txt  DemonstratedTrajectory_Cart14.txt  DemonstratedTrajectory_Cart15.txt  DemonstratedTrajectory_Cart16.txt  DemonstratedTrajectory_Cart2.txt  DemonstratedTrajectory_Cart3.txt  DemonstratedTrajectory_Cart4.txt  DemonstratedTrajectory_Cart5.txt  DemonstratedTrajectory_Cart6.txt  DemonstratedTrajectory_Cart7.txt  DemonstratedTrajectory_Cart8.txt  DemonstratedTrajectory_Cart9.txt  DemonstratedTrajectory_Joints1.txt  DemonstratedTrajectory_Joints10.txt  DemonstratedTrajectory_Joints11.txt  DemonstratedTrajectory_Joints12.txt  DemonstratedTrajectory_Joints13.txt  DemonstratedTrajectory_Joints14.txt  DemonstratedTrajectory_Joints15.txt  DemonstratedTrajectory_Joints16.txt  (+9 more)
data/plots/: gmr_online_changing_taskparams_badly_by_frederik_filtered.fig  gmr_online_changing_taskparams_filtered.fig  gmr_online_changing_taskparams_filtered_2.fig  gmr_online_jointspace_1.fig  gmr_online_taskparams1.fig  gmr_online_taskparams2.fig  gmr_online_taskparams_perturbation.fig  gmr_online_taskparams_perturbation_filtered.fig
devel/: .catkin  .rosinstall  setup.sh
documentation/: documentation.tex
gtest/: Makefile
launch/: .run.launch.swp  run.launch
lib/FRILibrary/Linux/: ExternalTargets.global  Makefile.global
lib/FRILibrary/Linux/FastResearchInterfaceTest/: Makefile  Makefile~
lib/FRILibrary/Linux/LWRGettingStartedExamples/: Makefile
lib/FRILibrary/etc/: 980039-FRI-Driver.init
lib/FRILibrary/include/: FastResearchInterface.h  LWRBaseControllerInterface.h  LinuxAbstraction.h  friudp.h
lib/LWR_Simulator/: CMakeLists.txt  manifest.xml  manifest.xml~
lib/LWR_Simulator/launch/: robot_model_only.launch  robot_simulator.launch
lib/LWR_Simulator/src/: drawGoalPosition.cpp  drawGoalPosition.cpp~  jointStateConverter.cpp~
lib/kuka_lwr_model/: robot_state_publisher.launch  robot_state_publisher.launch~
lib/kuka_lwr_model/robot_state_chain_publisher/: CMakeLists.txt  manifest.xml  realPosition.txt  sim2_realPosition.txt~
rviz/: kinect.rviz.vcg
src/: .temp-maindmpFRI.cpp.swp  CMakeLists.txt  RunTrajectorySimple.cpp  camera2robot_transform.cpp  camerahandle.cpp  camerahandle.h  config_extern_env.sh  config_master_env.sh  dmp_integrator.cpp  dmp_integrator.cpp.autosave  dmp_integrator.h  frames.gv  gmr.cpp  info_camera.txt  main.cpp  mainFRITest.cpp  mainFRITest_rviz.cpp  mainFRITest_rviz.cpp~  mainOnlineGmrTest.cpp  maindmpFRI.cpp  onlinegmr.cpp  onlinegmr.h  temp-maindmpFRI.cpp  test_dmp_integrator.cpp  thomas_maindmpFRI.cpp  utility.cpp  utility.h
src/FRILibrary/Linux/: ExternalTargets.global~
src/LWR_Simulator/: goals.txt  goals.txt~
src/LWR_Simulator/launch/: initial_joint_angles.yaml~
src/kuka_lwr_model/robot_state_chain_publisher/: refPosition.txt  sim2_realPosition.txt
utility/FRILibrary/Linux/: TargetDependencies.global
utility/FRILibrary/etc/: os.init
utility/FRILibrary/include/: FastResearchInterface.h~  FastResearchInterfaceTest.h  OSAbstraction.h
utility/LWR_Simulator/: CMakeLists.txt~  display_config  mainpage.dox
utility/LWR_Simulator/launch/: initial_joint_angles.yaml  robot_simulator.launch~
utility/LWR_Simulator/src/: jointStateConverter.cpp
utility/kuka_lwr_model/robot_state_chain_publisher/: sim2_refPosition.txt
utility/pbdlib/: .gitignore  CMakeLists.txt  README.md
utility/pbdlib/examples/: CMakeLists.txt  test_datapoints.cpp  test_demonstration.cpp  test_gmm.cpp  test_gmr.cpp  test_gmr2.cpp  test_hsmm.cpp  test_onlineDP.cpp  test_tpgmm.cpp  test_tpgmm_timeInvariant.cpp
utility/pbdlib/include/pbdlib/: gmm.h  hmm.h  hsmm.h  mvn.h  taskparameters.h  tpgmm.h
utility/pbdlib/src/: gmm.cpp  hmm.cpp  hsmm.cpp  mvn.cpp  taskparameters.cpp  tpdemonstration.cpp  tpgmm.cpp
(+38 files in other folders)
